MDEV-26337: subquery with groupby and ROLLUP returns incorrect results on LEFT JOIN on INDEXED values

Make const_expression_in_where() ignore the equalities injected by
LATERAL DERIVED optimization, unless these equalities are used for
ref access.

This follows what make_join_select()/make_cond_for_table() does:
these functions will discard such equalities too.